Added more granual information on data registrations.