@@ -1,6 +1,9 @@
 package org.ssm.app.pvp.service;
 
+import java.util.ArrayList;
 import java.util.Arrays;
+import java.util.List;
+import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 import javax.annotation.PostConstruct;
@@ -8,6 +11,7 @@ import javax.annotation.PostConstruct;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.core.io.ClassPathResource;
 import org.springframework.stereotype.Service;
+import org.ssm.app.pvp.data.StudentData;
 import org.ssm.app.pvp.data.StudentServiceResponse;
 import org.ssm.app.pvp.data.SubmittedAlumniData;
 import org.ssm.app.pvp.data.VerifiedAlumniData;
@@ -34,6 +38,7 @@ public class StudentDataServiceImpl implements StudentDataService {
 		ClassPathResource resourceData;
 		SubmittedAlumniData[] sumbmittedData;
 		VerifiedAlumniData[] portalData;
+		List<StudentData> uploadedData = new ArrayList<>();
 		
 		resourceData = new ClassPathResource(GOOGLE_FORM_SUBMITTED_DATA_URL);
 		sumbmittedData = mapper.readValue(resourceData.getInputStream(), SubmittedAlumniData[].class);
@@ -46,7 +51,7 @@ public class StudentDataServiceImpl implements StudentDataService {
 		resourceData = new ClassPathResource(PORTAL_UNVERIFIED_ALUMNI_DATA_URL);
 		portalData = mapper.readValue(resourceData.getInputStream(), VerifiedAlumniData[].class);
 		Stream.of(portalData).parallel().forEach(element-> element.setStatus("Uploaded"));
-		studentServiceResponse.setUploadedData(Arrays.asList(portalData));
+		uploadedData.addAll(Arrays.asList(portalData));
 
 		resourceData = new ClassPathResource(PORTAL_UNVERIFIED_ALUMNI_SINGLE_DATA_URL);
 		portalData = mapper.readValue(resourceData.getInputStream(), VerifiedAlumniData[].class);
@@ -55,9 +60,37 @@ public class StudentDataServiceImpl implements StudentDataService {
 
 		studentServiceResponse.setLastUpdateOn(updatedOn);
 		
-		studentServiceResponse.getUploadedData().stream()
-				.filter(data -> studentServiceResponse.getSubmittedData().contains(data)).toList()
-				.forEach(e -> System.out.println(e));
+		List<StudentData> totalPortalData = new ArrayList<>();
+		totalPortalData.addAll(studentServiceResponse.getVerifiedData());
+		totalPortalData.addAll(uploadedData);
+		totalPortalData.addAll(studentServiceResponse.getUploadedSingleData());
+
+		List<StudentData> registredData = studentServiceResponse.getSubmittedData().parallelStream()
+				.filter(element -> totalPortalData.contains(element)).collect(Collectors.toList());
+		
+		List<StudentData> notRegistredData = studentServiceResponse.getSubmittedData().parallelStream()
+				.filter(element -> !totalPortalData.contains(element)).collect(Collectors.toList());
+		
+		totalPortalData.parallelStream().filter(data-> registredData.contains(data)).forEach(element->{
+			for(StudentData data: registredData) {
+				if(data.equals(element)) {
+					data.setStatus(element.getStatus());
+					data.setStudentIdManually(element.getStudentId());break;
+				}
+			}
+		});
+		List<StudentData> googleFormData = new ArrayList<>();
+		
+		googleFormData.addAll(registredData);
+		googleFormData.addAll(notRegistredData);
+		uploadedData.addAll(notRegistredData);
+		
+		studentServiceResponse.setGoogleFormData(googleFormData);
+		studentServiceResponse.setUploadedData(uploadedData);
+		
+		System.out.println("Total Submitted records: "+ studentServiceResponse.getSubmittedData().size());
+		System.out.println("Registred from Submitted records: "+ registredData.size());				
+		System.out.println("Remaining Submitted records: "+ notRegistredData.size());
 		
 	}
 	
